--- a/es-data.yaml
+++ b/es-data.yaml
@@ -19,7 +19,7 @@ spec:
           capabilities:
             add:
               - IPC_LOCK
-        image: quay.io/pires/docker-elasticsearch-kubernetes:2.3.5_1
+        image: quay.io/pires/docker-elasticsearch-kubernetes:1.7.2
         imagePullPolicy: Always
         env:
         - name: NAMESPACE
@@ -34,6 +34,8 @@ spec:
           value: "false"
         - name: ES_HEAP_SIZE
           value: "256m"
+        - name: KUBERNETES_CA_CERTIFICATE_FILE
+          value: "/var/run/secrets/kubernetes.io/serviceaccount/ca.crt"
         ports:
         - containerPort: 9300
           name: transport
